--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,16 @@
   <meta charset="UTF-8">
   <title>Charades Online</title>
   <script src="/socket.io/socket.io.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.10.2/p5.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <script src="draw.js"></script>
+    <style>
+      body {
+        background-color: #23222c;
+        color: white;
+      }
+    </style>
 </head>
 <body>
   <h1>Charades Online</h1>
