--- a/public/index.html
+++ b/public/index.html
@@ -3,14 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>Charades Online - Login</title>
+  <link rel="stylesheet" href="style.css">
   <script src="/socket.io/socket.io.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <style>
-    body {
-      background-color: #23222c;
-      color: white;
-    }
-  </style>
 </head>
 <body>
   <h1>Charades Online</h1>
