frontend - koncowy look

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
         <i class="fas fa-theater-masks"></i>
       </div>
       <h1 class="game-title">Charades Online</h1>
-      <p class="game-subtitle">Act it out, guess it right!</p>
+      <p class="game-subtitle">Draw it fast, guess it right!</p>
     </div>
     
     <div class="game-form">
