--- a/public/game.html
+++ b/public/game.html
@@ -28,7 +28,7 @@
   </div>
   <div id="error-overlay"
     style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background-color:rgba(0,0,0,0.8); z-index:9999; text-align:center; padding-top:200px;">
-    <div style="background:#333; color:white; padding:30px; border-radius:10px; display:inline-block;">Add commentMore actions
+    <div style="background:#333; color:white; padding:30px; border-radius:10px; display:inline-block;">
       <p id="error-message" style="font-size:24px; margin-bottom:20px;"></p>
       <button onclick="goBackToLobby()"
         style="padding:10px 20px; font-size:16px; background:#555; color:white; border:none; border-radius:5px; cursor:pointer;">Back
