zmiana tabeli po zakończeniu rundy, dodanie wyświetlania hasła dla hosta i graczy

--- a/public/game.html
+++ b/public/game.html
@@ -23,16 +23,25 @@
 
   <div class="main-content">
     <!-- Lewa kolumna - Statystyki -->
-    <div class="game-stats">
-      <div class="timer-section">
-        <div class="timer-label">Time</div>
-        <div id="game-timer">1:30</div>
-      </div>
-      <div class="points-section">
-        <div class="points-label">Players Points</div>
-        <div id="user-table-container"></div>
-      </div>
+  <div class="game-stats">
+    <!--  sekcja z timerem -->
+    <div class="timer-section">
+      <div class="timer-label">Time</div>
+      <div id="game-timer">1:30</div>
     </div>
+
+    <!-- sekcja z hasłem -->
+    <div class="word-section">
+      <div class="timer-label">Hasło</div>
+      <div id="word-display">_ _ _ _ _</div>
+    </div>
+
+    <!-- sekcja z punktami -->
+    <div class="points-section">
+      <div class="points-label">Players Points</div>
+      <div id="user-table-container"></div>
+    </div>
+  </div>
     
     <!-- Środkowa kolumna - Canvas -->
     <div class="canvas-container">
